# src/dto/review.dto.ts
@@ -1,4 +1,8 @@
 import { GameDTO } from "./game.dto";
 
 export interface ReviewDTO {
+    id?: number;
+    rating:number;
+    review_text: string;
+    game: GameDTO;
 }
